# ws-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  demo.ja.tape  demo.tape  dist-workspace.toml  flake.nix
.claude-plugin/: marketplace.json
.claude/hooks/: format-rust.sh
.claude/skills/pre-push/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  mdbook.yml  release.yml
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: interactive.rs  main.rs
crates/ws-cli/tests/: cli_parse.rs  open_commands.rs  repos_commands.rs  status_commands.rs  store_commands.rs  worktree_commands.rs
crates/ws-cli/tests/common/: mod.rs
crates/ws-core/: Cargo.toml
crates/ws-core/src/: cli.rs  config.rs  context.rs  git.rs  lib.rs  store.rs  ui.rs
crates/ws-core/src/commands/: completions.rs  mod.rs  open.rs  repos.rs  status.rs  store.rs  worktree.rs
docs/: book.toml
docs/ja/: book.toml
docs/ja/src/: README.md  SUMMARY.md
docs/ja/src/commands/: interactive.md  new.md  open.md  repos.md  shared.md  status.md  store.md  ws-clone.md
docs/ja/src/concepts/: bare-worktree.md  overview.md  shared-store.md
docs/src/: README.md  SUMMARY.md
docs/src/commands/: interactive.md  list.md  new.md  open.md  repos.md  rm.md  shared.md  status.md  store.md  ws-clone.md
docs/src/concepts/: bare-worktree.md  overview.md  shared-store.md
docs/src/getting-started/: installation.md  quick-start.md
locales/: en.yml  ja.yml  zh-CN.yml
nix/: hm-module.nix
plugin/.claude-plugin/: plugin.json
plugin/skills/ws-branch/: SKILL.md
plugin/skills/ws-context/: SKILL.md
plugin/skills/ws-navigate/: SKILL.md
plugin/skills/ws-store-setup/: SKILL.md
src/: cli.rs  config.rs  git.rs  interactive.rs  main.rs  store.rs
src/commands/: mod.rs  repos.rs  shared.rs  status.rs  store.rs  worktree.rs
tests/: cli_parse.rs  repos_commands.rs  status_commands.rs  store_commands.rs  worktree_commands.rs
tests/common/: mod.rs
(+2 files in other folders)
