[package]
name = "ws"
version = "0.2.0"
edition = "2021"
description = "A CLI tool for git bare clone + worktree workflow"
license = "MIT"
repository = "https://github.com/langify-org/ws-cli"
homepage = "https://langify-org.github.io/ws-cli/"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
petname = "2"
inquire = "0.7"
rust-i18n = "3"
sys-locale = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
toml = "0.8"

[profile.dist]
inherits = "release"
lto = "thin"
