[package]
name = "ws"
version = "0.8.1"
edition = "2024"
description = "A CLI tool for git bare clone + worktree workflow"
license = "MIT"
repository = "https://github.com/langify-org/ws-cli"
homepage = "https://langify-org.github.io/ws-cli/"
readme = "../../README.md"

[[bin]]
name = "ws"
path = "src/main.rs"

[dependencies]
ws-core = { path = "../ws-core" }
anyhow = "1"
inquire = "0.7"
rust-i18n = "3"
anstream = "0.6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
toml = "0.8"
