[package]
name = "ws-core"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
petname = "2"
rust-i18n = "3"
sys-locale = "0.3"

[dev-dependencies]
tempfile = "3"
