[package]
name = "ws-core"
version = "0.8.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rust-i18n = "3"
sys-locale = "0.3"
pathdiff = "0.2"
shellexpand = "3"
anstyle = "1"
anstream = "0.6"

[dev-dependencies]
tempfile = "3"
